[package]
name = "axiom-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async Runtime & Concurrency
tokio = { version = "1.38", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"

# Web Framework & HTTP Server
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
async-trait = "0.1"

# HTTP Client (to proxy requests to upstream models)
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization & YAML Parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Telemetry Database (SQLite bundled for absolute portability across systems)
rusqlite = { version = "0.31", features = ["bundled"] }

# System Telemetry & Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8", features = ["v4", "serde"] }

# Embedded Assets (To statically compile our React SPA directly into our single binary)
rust-embed = { version = "8.4", features = ["axum"] }
mime_guess = "2.0"
